actions/govbot/tests/snapshots/wizard_tests__wizard_specific_no_tag.snap
---
source: tests/wizard_tests.rs
assertion_line: 103
expression: "&yml"
---
# Govbot Configuration
# Schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json
$schema: https://raw.githubusercontent.com/chihacknight/govbot/main/schemas/govbot.schema.json

datasets:
  - il
  - ca
  - ny

tags:
  # Add your tags here. Example:
  # my_topic:
  #   description: |
  #     Legislation related to ...
  #   examples:
  #     - "Example bill description"
  {}

transforms:
  classify:
    command: govbot classify
    reads: docs
    writes: classification

pipelines:
  default:
    - classify

build:
  base_url: "https://example.com"
  output_dir: "docs"
  output_file: "feed.xml"
